Fix sidenav button overlapping map

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,11 @@
 .video-list {
   width: 400px;
 }
+
+.map-component {
+  margin-top: -36px;
+}
+
+.video-picker-toggle-button {
+  z-index: 10;
+}
